--- a/FoodPin/Base.lproj/Main.storyboard
+++ b/FoodPin/Base.lproj/Main.storyboard
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="u6K-Sn-9bi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fiV-tT-dqW">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15705"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Restaurant Table View Controller-->
+        <!--FoodPin-->
         <scene sceneID="Aux-Jq-OMh">
             <objects>
                 <tableViewController id="u6K-Sn-9bi" customClass="RestaurantTableViewController" customModule="FoodPin" customModuleProvider="target" sceneMemberID="viewController">
@@ -70,6 +71,7 @@
                                     <outlet property="nameLabel" destination="rt5-OS-uVy" id="XL1-5I-9Xc"/>
                                     <outlet property="thumbnailImageView" destination="HGe-h3-6Mw" id="tzb-Ok-Kfa"/>
                                     <outlet property="typeLabel" destination="CwU-5G-CMP" id="pkf-UC-V67"/>
+                                    <segue destination="sP3-2U-5VD" kind="show" identifier="showRestaurantDetail" id="AfC-Jn-j6l"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -78,10 +80,59 @@
                             <outlet property="delegate" destination="u6K-Sn-9bi" id="juU-fL-jpn"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="FoodPin" id="JfG-uA-nEC"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="95v-r2-yqQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="367" y="123"/>
+            <point key="canvasLocation" x="1276.8115942028987" y="122.54464285714285"/>
+        </scene>
+        <!--Restaurant Detail View Controller-->
+        <scene sceneID="74T-kO-UiZ">
+            <objects>
+                <viewController id="sP3-2U-5VD" customClass="RestaurantDetailViewController" customModule="FoodPin" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="v6I-8S-j1d">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8LC-qG-FgG">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="lS2-9a-QWU" firstAttribute="trailing" secondItem="8LC-qG-FgG" secondAttribute="trailing" id="44W-OC-2Cg"/>
+                            <constraint firstItem="8LC-qG-FgG" firstAttribute="top" secondItem="lS2-9a-QWU" secondAttribute="top" id="7G9-bA-5p6"/>
+                            <constraint firstItem="lS2-9a-QWU" firstAttribute="bottom" secondItem="8LC-qG-FgG" secondAttribute="bottom" id="syZ-lG-eqN"/>
+                            <constraint firstItem="8LC-qG-FgG" firstAttribute="leading" secondItem="lS2-9a-QWU" secondAttribute="leading" id="xME-XZ-jEh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="lS2-9a-QWU"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Je8-To-7Ly"/>
+                    <connections>
+                        <outlet property="restaurantImageView" destination="8LC-qG-FgG" id="sAF-yQ-g97"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bg0-vf-RbI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2238" y="123"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YN1-7b-cBv">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fiV-tT-dqW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Coe-rQ-Qxg">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="u6K-Sn-9bi" kind="relationship" relationship="rootViewController" id="mIJ-OQ-DgR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jk0-Lb-2ja" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="366.66666666666669" y="122.54464285714285"/>
         </scene>
     </scenes>
 </document>
